methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:9: error: ';' expected but 'return' found.
  forward()return seenBaggle
           ^